# LCSFinder

./: LCSFinder.cpp  LCSFinder.h  LCSFinder.i  LCSFinder_wrap.cxx  LICENSE  LICENSE.md  README.md  process_ent_functs.py  ru.sh  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml  python-publish-pypi.yml  python-publish.yml
LCSFinder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py
