[metadata]
version = 0.1.0
license= MIT license
author= Bridget Smart and Max Ward
author_email= bridget.anna.smart@gmail.com
description = A toolkit for quickly calculating longest common substrings with specific relevance to non-parametric entropy estimation.
long_description_content_type = text/markdown
long_description= file: README.md
url = https://github.com/bridget-smart/LCSFinder

[build_ext]
inplace=1

